files re organized for sequelize, route edits

--- a/public/main.html
+++ b/public/main.html
@@ -90,7 +90,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-    <script src="./assets/app.js"></script>
+    <script src=""></script>
 </body>
 
 </html>
