--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 </div>
 
 
-  <script type="text/javascript" src="assets/app.js"></script>
+  <script type="text/javascript" src=""></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 
 </body>
