added routes for trips page and button on main.html

--- a/public/main.html
+++ b/public/main.html
@@ -37,9 +37,13 @@
 
             <form class="col s12">
                 <p class="center-align">
-                <button class="btn waves-effect waves-light deep-orange darken-4" id="shiftstart">Start Shift
-                    <i class="material-icons right">fingerprint</i>
-                </button>
+                    <a class="btn waves-effect waves-light deep-orange darken-4" id="pastTrips" href="/trips">Past Trips
+                        <i class="material-icons right">directions_car</i>
+                    </a>
+                    <br><br>
+                    <button class="btn waves-effect waves-light deep-orange darken-4" id="shiftstart">Start Shift
+                        <i class="material-icons right">fingerprint</i>
+                    </button>
                 </p>
 
                 <div class="input-field ">
