--- a/public/trips.html
+++ b/public/trips.html
@@ -11,11 +11,18 @@
 
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Drive App - Trips</title>
 </head>
-<body>
-    Yo
 
+<body>
+
+    <div class="container">
+        <div id="data">
+        </div>
+    </div>
+    
 <script type="text/javascript" src="/js/trips.js"></script>    
+
 </body>
+
 </html>
