js added for trips html and routes

--- a/public/trips.html
+++ b/public/trips.html
@@ -18,6 +18,24 @@
 
     <div class="container">
         <div id="data">
+            <div class="row">
+                <div class="col-md-12" id="shifts-container">
+                    <h3 class="header">Logged Shifts</h3><br>
+                    <!-- Data -->
+                    <table class="table table-hover" id="trips-table">
+                        <thead>
+                            <tr>
+                                <th>User</th>
+                                <th>Miles</th>
+                                <th>Tips</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
     
