--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
 
   
   <div class="card-panel transparent z-depth-5">
-    <h2 class="header black-text center">Driver App</h2>
-      <p class="black-text center">Descriptive text.</p>
+    <h2 class="header white-text center">Driver App</h2>
+      <p class="white-text center">Descriptive text.</p>
   </div>
 
   <br><br>
@@ -42,8 +42,8 @@
               <label for="username"> Username: </label>
             </div>
             <div id="signin-buttons">
-              <button class="btn waves-effect waves-light deep-orange darken-4 loginButton" type="submit" id="submit">Log In<i class="material-icons right">fingerprint</i></button>
-              <!-- <a href="main.html" class="btn waves-effect waves-light deep-orange darken-4" name="action">New User<i class="material-icons right">add</i></a> -->
+              <button class="btn waves-effect waves-light deep-orange darken-4 loginButton" type="submit" id="submit">Log In<i class="material-icons left">lock_open</i></button>
+              <a href="main.html" class="btn waves-effect waves-light deep-orange darken-4" name="action">New User<i class="material-icons right">add</i></a>
             </div>
           </form>
         </div>
