--- a/public/main.html
+++ b/public/main.html
@@ -23,15 +23,17 @@
                 <img src="./assets/images/logo1.png" alt="logo" />
             </a></h4>
                 <!-- <p class="white-text center">Enter your info to get started.</p> -->
-            <br><br>
+
+            <!-- <br><br> -->
+
             <form class="col s12">
                 <p class="center-align">
                     <a class="btn waves-effect waves-light deep-orange darken-4" id="pastTrips" href="/trips">Past Trips
-                        <i class="material-icons right">directions_car</i>
+                        <i class="material-icons left">directions_car</i>
                     </a>
                     <br><br>
                     <button class="btn waves-effect waves-light deep-orange darken-4" id="shiftstart">Start Shift
-                        <i class="material-icons right">fingerprint</i>
+                        <i class="material-icons left">timer</i>
                     </button>
                 </p>
                 <div class="input-field ">
@@ -41,7 +43,7 @@
                 <br>
                 <p class="center-align">
                 <button class="btn waves-effect waves-light deep-orange darken-4" id="shiftend">End Shift
-                    <i class="material-icons right">fingerprint</i>
+                    <i class="material-icons left">timer_off</i>
                 </button>
                 </p>
                 <br>
