--- a/public/main.html
+++ b/public/main.html
@@ -71,6 +71,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-    <!-- <script src=""></script> -->
+    <script src="./js/main.js"></script>
 </body>
 </html>
