integrated passport code

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
             </div>
             <div id="signin-buttons">
               <button class="btn waves-effect waves-light deep-orange darken-4 loginButton" type="submit" id="submit">Log In<i class="material-icons left">lock_open</i></button>
-              <a href="main.html" class="btn waves-effect waves-light deep-orange darken-4" name="action">New User<i class="material-icons right">add</i></a>
+              <a href="/signup" class="btn waves-effect waves-light deep-orange darken-4" name="action">New User<i class="material-icons right">add</i></a>
             </div>
           </form>
         </div>
