--- a/public/index.html
+++ b/public/index.html
@@ -36,16 +36,22 @@
       <div class="card grey darken-3 z-depth-5" id="signin">
         <div class="card-content white-text">
           <span class="card-title">Sign in</span>
-          <form class="container">
+
+          <form class="container" id="login" name="login">
             <div class="input-field col m5">
-              <input id="username" type="text" class="validate" required>
+              <input id="login-username" type="text" class="validate" required>
               <label for="username"> Username: </label>
             </div>
+            <div class="input-field col m5">
+              <input id="login-password" type="password" class="validate" required>
+              <label for="password"> Password: </label>
+              </div>
             <div id="signin-buttons">
-              <button class="btn waves-effect waves-light deep-orange darken-4 loginButton" type="submit" id="submit">Log In<i class="material-icons left">lock_open</i></button>
+              <button class="btn waves-effect waves-light deep-orange darken-4 loginButton" type="submit" id="login-submit">Log In<i class="material-icons left">lock_open</i></button>
               <a href="/signup" class="btn waves-effect waves-light deep-orange darken-4" name="action">New User<i class="material-icons right">add</i></a>
             </div>
           </form>
+
         </div>
       </div>
     </div>
@@ -54,7 +60,7 @@
 </div>
 
 
-  <!-- <script type="text/javascript" src=""></script> -->
+  <script type="text/javascript" src="./js/index.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 
 </body>
