--- a/public/index.html
+++ b/public/index.html
@@ -26,19 +26,22 @@
             <div class="card-content white-text">
               <span class="card-title">Log in</span>
 
-              <form class="container" id="login" name="login" method="post" action="/trips" >
-                <div class="input-field col m5">
-                  <input id="login-username" type="text" class="validate" name="username" required>
-                  <label for="username"> Username: </label>
-                </div>
-                <div class="input-field col m5">
-                  <input id="login-password" type="password" name="password" class="validate" required>
-                  <label for="password"> Password: </label>
-                </div>
+              <form id="login" name="login" method="post" action="login">
+                <label for="username">Username</label>
+                <input class="text" name="username" type="text" />
+                <label for="password">Password</label>
+                <input name="password" type="password" />
                 <div id="signin-buttons">
-                  <button class="btn waves-effect waves-light deep-orange darken-4 loginButton" type="submit" id="login-submit">Log In<i class="material-icons left">lock_open</i></button>
-                  <a href="/signup" class="btn waves-effect waves-light deep-orange darken-4" name="action">New User<i class="material-icons right">add</i></a>
+                <input class="btn waves-effect waves-light deep-orange darken-4 loginButton" type="submit" value="Sign In" id="login-submit"/>
                 </div>
+
+
+              <!-- 
+                  <button class="btn waves-effect waves-light deep-orange darken-4 loginButton" type="submit" >Log In<i class="material-icons left">lock_open</i></button> -->
+
+                  
+                  <a href="/signup" class="btn waves-effect waves-light deep-orange darken-4" name="action">New User<i class="material-icons right">add</i></a>
+
               </form>
 
             </div>
