update main page layout, added to trips model

--- a/public/main.html
+++ b/public/main.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="input-field col s6">
                         <input id="tips" type="text" class="validate">
-                        <label for="tips">Enter Tips: </label>
+                        <label for="tips">Enter Tips ($): </label>
                     </div>
                 </div>
                 <div class="row">
@@ -51,7 +51,7 @@
                     </div>
                     <div class="input-field col s6">
                         <input id="description" type="text" class="validate">
-                        <label for="description">Description: </label>
+                        <label for="description">Description (Optional): </label>
                     </div>
                 </div>
                 <p class="center-align">
@@ -71,9 +71,9 @@
                                 <tr>
                                     <th>User</th>
                                     <th>Miles</th>
-                                    <th>Tips</th>
+                                    <th>Tips ($)</th>
                                     <th>Hours Worked</th>
-                                    <th>Hourly Wage</th>
+                                    <th>Hourly Wage ($)</th>
                                     <!-- <th> Description </th> -->
                                 </tr>
                             </thead>
