updates to main js & html

--- a/public/main.html
+++ b/public/main.html
@@ -64,17 +64,19 @@
             <br>
 
             <div class="row" id="data">
+                <h5>Most Recent Trip</h5>
                 <div class="col-md-12">
                     <div class="center-align">
                         <table class="table table-hover" id="new-trip-table">
                             <thead>
                                 <tr>
                                     <th>User</th>
+                                    <th>Odometer (Start)</th>
+                                    <th>Odometer (End)</th>
                                     <th>Miles</th>
                                     <th>Tips ($)</th>
                                     <th>Hours Worked</th>
                                     <th>Hourly Wage ($)</th>
-                                    <!-- <th> Description </th> -->
                                 </tr>
                             </thead>
                             <tbody>
@@ -85,7 +87,7 @@
             </div>
 
             <div class="center-align">
-                <a class="btn waves-effect waves-light deep-orange darken-4" id="pastTrips" href="/trips">Past Trips
+                <a class="btn waves-effect waves-light deep-orange darken-4" id="pastTrips" href="/trips">All Trips
                     <i class="material-icons left">directions_car</i>
                 </a>
             </div>
