only numbers allow in all form fields expect description

--- a/public/main.html
+++ b/public/main.html
@@ -19,11 +19,11 @@
                 <img src="./assets/images/logo1.png" alt="logo" />
             </a></h4>
 
-            <form>
+            <form id="trip_form">
 
                 <div class="row">
                     <div class="input-field col s6">
-                        <input id="starting" type="text" class="validate">
+                        <input id="starting" type="number" class="validate">
                         <label for="starting">Current Odometer Reading: </label>
                     </div>
                 </div>
@@ -36,17 +36,17 @@
 
                 <div class="row">
                     <div class="input-field col s6">
-                        <input id="ending" type="text" class="validate">
+                        <input id="ending" type="number" class="validate">
                         <label for="ending">Ending Odometer Reading: </label>
                     </div>
                     <div class="input-field col s6">
-                        <input id="tips" type="text" class="validate">
+                        <input id="tips" type="number" class="validate">
                         <label for="tips">Enter Tips ($): </label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s6">
-                        <input id="hours" type="text" class="validate">
+                        <input id="hours" type="number" class="validate">
                         <label for="hours">Hours Worked: </label>
                     </div>
                     <div class="input-field col s6">
