--- a/public/trips.html
+++ b/public/trips.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <!-- <link rel="stylesheet" href="css/style.css" /> -->
-
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <title>Drive App - Trips</title>
@@ -29,6 +28,7 @@
                                 <th>Miles</th>
                                 <th>Tips</th>
                                 <th>Description</th>
+                                <th>Delete</th>                                
                             </tr>
                         </thead>
                         <tbody>
@@ -39,7 +39,8 @@
         </div>
     </div>
     
-<script type="text/javascript" src="/js/trips.js"></script>    
+<script type="text/javascript" src="/js/trips.js"></script>  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>  
 
 </body>
 
