--- a/public/signup.html
+++ b/public/signup.html
@@ -15,31 +15,30 @@
 	<body>
 		
 		<div class="card-panel transparent z-depth-5">
-			<h2 class="header white-text center">Driver App</h2>
-			<p class="white-text center">Descriptive text.</p>
+			<h2 class="header white-text center">Mile$</h2>
+			<p class="white-text center">Track your trips.</p>
 		</div>
 		<br><br>
 		<div class="container">
 			<div class="row">
 				<div class="col s12">
-					<div class="card grey darken-3 z-depth-5" id="signin">
+					<div class="card grey darken-4 z-depth-5" id="signup">
 						<div class="card-content white-text">
 							<span class="card-title">Sign Up</span>
-
-							<form class="container" id="signup" name="signup">
-								<div class="input-field col m5">
-									<input id="new-user-username" type="text" name="username" class="validate" required>
-									<label for="username"> Username: </label>
-								</div>
-								<div class="input-field col m5">
-									<input id="new-user-password" name="password" type="password" class="validate" required>
-									<label for="password"> Password: </label>
-								</div>
-								<div id="signin-buttons">
-									<button class="btn waves-effect waves-light deep-orange darken-4 loginButton" type="submit" id="new-user-submit">Sign Up<i class="material-icons left">lock_open</i></button>
-									<!-- <a href="/signup" class="btn waves-effect waves-light deep-orange darken-4" name="action">New User<i class="material-icons right">add</i></a> -->
-								</div>
-							</form>
+							<br>
+							<form id="signup" name="signup" method="post" action="login">
+								<div class="col m5">
+				                <label for="username" class="label">Username: </label>
+				                <input class="text input-field" name="username" type="text"/>
+				            	</div>
+				            	<div class="col m5">
+				                <label for="password" class="label">Password: </label>
+				                <input class="text input-field" name="password" type="password" />
+				            	</div>
+				                <div id="signup-buttons">
+				                  <button class="btn waves-effect waves-light deep-orange darken-4 signupButton" type="submit" id="signup-submit">Sign Up<i class="material-icons right">touch_app</i></button>
+				                </div>
+				            </form>
 
 						</div>
 					</div>
