--- a/public/signup.html
+++ b/public/signup.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col s12">
-					<div class="card grey darken-4 z-depth-5" id="signup">
+					<div class="card grey darken-4 z-depth-5 opacity" id="signup">
 						<div class="card-content white-text">
 							<span class="card-title">Sign Up</span>
 							<br>
