udpated main.js to toggle trips table headers

--- a/public/main.html
+++ b/public/main.html
@@ -98,7 +98,7 @@
             <br>
 
             <div class="center-align dropdown">
-                <a class='dropdown-button btn waves-effect waves-light deep-orange darken-4' href='#'>All Trips        
+                <a id="btnAllTrips" class='dropdown-button btn waves-effect waves-light deep-orange darken-4' href='#'>All Trips        
                     <i class="material-icons left">directions_car</i>
                 </a>
 
@@ -115,7 +115,7 @@
                                 <th>Delete</th>                                
                             </tr>
                         </thead>
-                        <tbody id="all-trips">
+                        <tbody>
                         </tbody>
                     </table>
             </div>            
