fixed broken card reveal

--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,8 @@
               </form>
             </div>
 
-            <div class="card-reveal black z-depth-5">
-              <div class="card grey darken-4 z-depth-5" id="signup">
+            <div class="card-reveal grey darken-4 z-depth-5" id="signup">
+              <!-- <div class="card grey darken-4 z-depth-5" id="signup"> -->
               <div class="card-content white-text">
                 <span class="card-title">Sign Up<i class="material-icons right">close</i></span>
                 <br>
@@ -67,7 +67,7 @@
                       </form>
 
                   </div>
-                </div>
+                <!-- </div> -->
 
             </div>
           </div>
