--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
                 <input id="returning-user-password" name="password" type="password" />
 
                 <div id="signin-buttons">
-                <button class="btn waves-effect waves-light deep-orange darken-4 loginButton" type="submit" id="returning-user-submit">Log In<i class="material-icons left">lock_open</i></button> 
+                <a href="main.html" class="btn waves-effect waves-light deep-orange darken-4 loginButton" type="submit" id="returning-user-submit">Log In<i class="material-icons left">lock_open</i></a>
                 <!-- <br><br> -->
                 <!-- <a href="/signup" class="btn waves-effect waves-light deep-orange darken-4" name="action">New User<i class="material-icons right">person_add</i></a> -->
                 </div>
@@ -62,7 +62,7 @@
                           <input class="text input-field" name="password" type="password" />
                         </div>
                           <div id="signup-buttons">
-                            <button class="btn waves-effect waves-light deep-orange darken-4 signupButton" type="submit" id="signup-submit">Sign Up<i class="material-icons right">touch_app</i></button>
+                            <a href="main.html" class="btn waves-effect waves-light deep-orange darken-4 signupButton" type="submit" id="signup-submit">Sign Up<i class="material-icons right">touch_app</i></a>
                           </div>
                       </form>
 
