--- a/public/main.html
+++ b/public/main.html
@@ -15,31 +15,23 @@
 <body>
     <div class="container">
         <br>
-
         <div class="card grey darken-4 z-depth-5" id="enterinfo">
             <h4 class="white-text center"><a href="logo">
                 <img src="./assets/images/logo1.png" alt="logo" class="logo" />
             </a></h4>
-
             <form id="trip_form">
-
                 <div class="row">
                     <div class="col s6">
                         <input id="starting" type="number" class="validate input-field">
                         <label for="starting" class="label">Current Odometer Reading </label>
                     </div>
                 </div>
-
-                <!-- <br> -->
-
                 <p class="center-align">
                     <button class="btn waves-effect waves-light deep-orange darken-4" id="shiftstart">Start Shift
                         <i class="material-icons left">timer</i>
                     </button>
                 </p>
-
                 <br>
-
                 <div class="row">
                     <div class="col s6">
                         <input id="ending" type="number" class="validate input-field">
@@ -60,18 +52,14 @@
                         <label for="description" class="label">Description (Optional) </label>
                     </div>
                 </div>
-
                 <br>
-
                 <p class="center-align">
                     <button class="btn waves-effect waves-light deep-orange darken-4" id="shiftend">End Shift
                         <i class="material-icons left">timer_off</i>
                     </button>    
                 </p>
             </form>
-
             <br>
-
             <div class="row" id="data">
                 <h5>Most Recent Trip</h5>
                 <div class="col-md-12">
@@ -101,23 +89,31 @@
                 <a id="btnAllTrips" class='dropdown-button btn waves-effect waves-light deep-orange darken-4' href='#'>All Trips        
                     <i class="material-icons left">directions_car</i>
                 </a>
+            </div>
 
                 <br><br><br>
 
-                <!-- Data -->
-                <table class="table table-hover white-text" id="trips-table">
-                        <thead >
-                            <tr>
-                                <!-- <th>User</th> -->
-                                <th>Miles</th>
-                                <th>Tips</th>
-                                <th>Description</th>
-                                <th>Delete</th>                                
-                            </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
+                <div class="row" id="all-trips">
+                    <h5>All Trips</h5>
+                    <div class="col-md-12">
+                        <div class="center-align">
+                            <table class="table table-hover white-text" id="all-trips-table">
+                                <thead >
+                                    <tr>
+                                        <th>User</th>
+                                        <th>Odometer (Start)</th>
+                                        <th>Odometer (End)</th>
+                                        <th>Miles</th>
+                                        <th>Tips ($)</th>
+                                        <th>Hours Worked</th>
+                                        <th>Hourly Wage ($)</th>                               
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                    </div>
+                </div>            
             </div>            
         </div>
     </div>
