--- a/public/main.html
+++ b/public/main.html
@@ -13,15 +13,25 @@
     <title>Driver App - Track</title>
 </head>
 <body>
-    <div class="container">
-        <br>
 
+    <div class="card-panel transparent z-depth-5">
+      <h2 class="header white-text center">Mile$</h2>
+      <p class="white-text center">Track your trips.</p>
+    </div>
+    <br><br>
+
+    <div class="container">
         <div class="card grey darken-4 z-depth-5" id="enterinfo">
-            <h4 class="white-text center"><a href="logo">
+            <h4 class="white-text center"><!-- <a href="logo">
                 <img src="./assets/images/logo1.png" alt="logo" class="logo" />
-            </a></h4>
+            </a> -->
+            </h4>
 
             <form id="trip_form">
+
+                <p class="right-align">
+                <a href="/logout" class="btn waves-effect waves-light deep-orange darken-4 signupButton" type="submit" id="new-user-submit">Log Out<i class="material-icons left">lock</i></a>
+                </p>
 
                 <div class="row">
                     <div class="col s6">
@@ -118,7 +128,7 @@
                         <tbody>
                         </tbody>
                     </table>
-            </div>            
+            </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
