adjusted script tags to bottom of page

--- a/public/main.html
+++ b/public/main.html
@@ -8,8 +8,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link rel="stylesheet" href="css/style.css" />
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <title>Driver App - Track</title>
 </head>
 <body>
@@ -103,7 +101,7 @@
             <br>
 
             <div class="center-align dropdown">
-                <a id="btnAllTrips" class='dropdown-button btn waves-effect waves-light deep-orange darken-4' href='#'>All Trips        
+                <a id="btnAllTrips" class='dropdown-button btn waves-effect waves-light deep-orange darken-4'>All Trips        
                     <i class="material-icons left">directions_car</i>
                 </a>
             </div>
@@ -136,6 +134,8 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
