fixed all trips toggle bug

--- a/public/main.html
+++ b/public/main.html
@@ -101,14 +101,14 @@
             <br>
 
             <div class="center-align dropdown">
-                <a id="btnAllTrips" class='dropdown-button btn waves-effect waves-light deep-orange darken-4'>All Trips        
+                <a id="btnAllTrips" class='dropdown-button btn waves-effect waves-light deep-orange darken-4'>Show All Trips        
                     <i class="material-icons left">directions_car</i>
                 </a>
             </div>
 
             <!-- <br><br><br> -->
 
-            <div class="row" id="data">
+            <div class="row" id="all-trips-data">
                 <h5>All Trips</h5>
                 <div class="col-md-12">
                     <div class="center-align">
