--- a/public/main.html
+++ b/public/main.html
@@ -1,86 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Driver App - Track</title>
-</head>
-<body>
-    <div class="card-panel transparent z-depth-5">
-        <h2 class="header white-text center">Mile$</h2>
-        <p class="white-text center">Track your trips.</p>
-    </div>
-
-    <br><br>
-
-    <div class="container">
-
-        <div class="card grey darken-4 z-depth-5" id="enterinfo">
-            <p class="right-align">
-                <a href="/logout" class="btn waves-effect waves-light deep-orange darken-4 signupButton" type="submit" id="new-user-submit">Log Out<i class="material-icons left">lock</i></a>
-            </p>
-
-            <form id="trip_form">
-
-                <div class="row">
-                    <div class="col s6">
-                        <input id="starting" type="number" class="validate input-field">
-                        <label for="starting" class="label">Current Odometer Reading </label>
-                    </div>
-                </div>
-
-                <p class="center-align">
-                    <button class="btn waves-effect waves-light deep-orange darken-4" id="shiftstart">Start Shift
-                        <i class="material-icons left">timer</i>
-                    </button>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+        <link rel="stylesheet" href="css/style.css" />
+        <title>Driver App - Track</title>
+    </head>
+    <body>
+        <div class="card-panel titlePanel z-depth-5">
+            <h1 class="header white-text center mainTitle">Mile$</h1>
+            <h4 class="white-text center subTitle">Log your Miles</h4>
+        </div>
+        <br><br>
+        <div class="container">
+            <div class="card grey darken-4 z-depth-5 enterinfo">
+                <p class="right-align">
+                    <a href="/logout" class="btn waves-effect waves-light deep-orange darken-4 signupButton" type="submit" id="new-user-submit">Log Out<i class="material-icons left">lock</i></a>
                 </p>
-
+                <form id="trip_form">
+                    <div class="shiftStart">
+                        <div class="row">
+                            <div class="col s12">
+                                <input id="starting" type="number" class="validate input-field">
+                                <label for="starting" class="label">Current Odometer Reading </label>
+                            </div>
+                        </div>
+                        <p class="center-align">
+                            <button class="btn waves-effect waves-light deep-orange darken-4" id="shiftstart">Start Shift
+                            <i class="material-icons left">timer</i>
+                            </button>
+                        </p>
+                        <br>
+                    </div>
+                    <div class="shiftEnd">
+                        <div class="row">
+                            <div class="col s12 m6">
+                                <input id="ending" type="number" class="validate input-field">
+                                <label for="ending" class="label">Ending Odometer Reading </label>
+                            </div>
+                            <div class="col s12 m6">
+                                <input id="tips" type="number" class="validate input-field">
+                                <label for="tips" class="label">Enter Tips ($) </label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col s12 m6">
+                                <input id="hours" type="number" class="validate input-field">
+                                <label for="hours" class="label">Hours Worked </label>
+                            </div>
+                            <div class="col s12 m6">
+                                <input id="description" type="text" class="validate input-field">
+                                <label for="description" class="label">Description (Optional) </label>
+                            </div>
+                        </div>
+                        <br>
+                        <p class="center-align">
+                            <button class="btn waves-effect waves-light deep-orange darken-4" id="shiftend">End Shift
+                            <i class="material-icons left">timer_off</i>
+                            </button>
+                        </p>
+                    </div>
+                </form>
                 <br>
-
-                <div class="row">
-                    <div class="col s6">
-                        <input id="ending" type="number" class="validate input-field">
-                        <label for="ending" class="label">Ending Odometer Reading </label>
-                    </div>
-                    <div class="col s6">
-                        <input id="tips" type="number" class="validate input-field">
-                        <label for="tips" class="label">Enter Tips ($) </label>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col s6">
-                        <input id="hours" type="number" class="validate input-field">
-                        <label for="hours" class="label">Hours Worked </label>
-                    </div>
-                    <div class="col s6">
-                        <input id="description" type="text" class="validate input-field">
-                        <label for="description" class="label">Description (Optional) </label>
-                    </div>
-                </div>
-
-                <br>
-
-                <p class="center-align">
-                    <button class="btn waves-effect waves-light deep-orange darken-4" id="shiftend">End Shift
-                        <i class="material-icons left">timer_off</i>
-                    </button>    
-                </p>
-
-            </form>
-
-            <br>
-
-            <div class="row" id="data">
-                <h5>Most Recent Trip</h5>
-                <div class="col-md-12">
-                    <div class="center-align">
-                        <table class="table table-hover white-text" id="new-trip-table">
+                <div class="row" id="recent-trip-data">
+                    <h5>Most Recent Trip</h5>
+                    <div class="col s12 center-align">
+                        <table class="table table-hover white-text responsive-table" id="new-trip-table">
                             <thead>
                                 <tr>
                                     <th>Odometer (Start)</th>
@@ -96,22 +85,17 @@
                         </table>
                     </div>
                 </div>
-            </div>
-
-            <br>
-
-            <div class="center-align dropdown">
-                <a id="btnAllTrips" class='dropdown-button btn waves-effect waves-light deep-orange darken-4'>Show All Trips        
-                    <i class="material-icons left">directions_car</i>
-                </a>
-            </div>
-
-            <br><br>
-            <div class="row" id="all-trips-data">
-                <h5>All Trips</h5>
-                <div class="col-md-12">
-                    <div class="center-align">
-                        <table class="table table-hover white-text" id="all-trips-table">
+                <br>
+                <div class="center-align dropdown">
+                    <a id="btnAllTrips" class='dropdown-button btn waves-effect waves-light deep-orange darken-4'>Show All Trips
+                        <i class="material-icons left">directions_car</i>
+                    </a>
+                </div>
+                <br><br>
+                <div id="all-trips-data">
+                    <h5>All Trips</h5>
+                    <div class="col s12 center-align">
+                        <table class="table table-hover white-text responsive-table" id="all-trips-table">
                             <thead >
                                 <tr>
                                     <th>Odometer (Start)</th>
@@ -126,15 +110,12 @@
                             </tbody>
                         </table>
                     </div>
-                </div>            
+                </div>    
             </div>
-        
         </div>
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-    <script src="./js/main.js"></script>
-</body>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+        <script src="./js/main.js"></script>
+    </body>
 </html>
