--- a/public/main.html
+++ b/public/main.html
@@ -132,6 +132,44 @@
         </div>
     </div>
 
+    <!-- Modal Structure -->
+    <div id="modal1" class="modal">
+        <div class="modal-content">
+            <h4>Edit Trip</h4>
+            <form id="edit_trip_form">
+                <div class="row">
+                    <div class="col s6">
+                        <input id="editStarting" type="number" class="validate input-field">
+                        <label for="starting" class="label">Current Odometer Reading </label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s6">
+                        <input id="editEnding" type="number" class="validate input-field">
+                        <label for="ending" class="label">Ending Odometer Reading </label>
+                    </div>
+                    <div class="col s6">
+                        <input id="editTips" type="number" class="validate input-field">
+                        <label for="tips" class="label">Enter Tips ($) </label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s6">
+                        <input id="editHours" type="number" class="validate input-field">
+                        <label for="hours" class="label">Hours Worked </label>
+                    </div>
+                    <div class="col s6">
+                        <input id="editDescription" type="text" class="validate input-field">
+                        <label for="description" class="label">Description (Optional) </label>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+        </div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
